// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots - Mobile Header MobileHeaderContainer with top value 1`] = `
<DocumentFragment>
  .c0 {
  background: #ffffff;
  border-bottom: .0625rem solid #9e9e9e;
  border-radius: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  width: 100%;
  z-index: 1;
}

.c0 > div {
  border-left: .0625rem solid #9e9e9e;
}

.c0 > div:first-child {
  border-left: none;
}

@media (max-width:768px) {
  .c0 {
    top: 44px;
  }
}

<div
    class="c0"
  >
    Test
  </div>
</DocumentFragment>
`;

exports[`Snapshots - Mobile Header MobileHeaderContainer without top value 1`] = `
<DocumentFragment>
  .c0 {
  background: #ffffff;
  border-bottom: .0625rem solid #9e9e9e;
  border-radius: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  width: 100%;
  z-index: 1;
}

.c0 > div {
  border-left: .0625rem solid #9e9e9e;
}

.c0 > div:first-child {
  border-left: none;
}

@media (max-width:768px) {

}

<div
    class="c0"
  >
    Test
  </div>
</DocumentFragment>
`;

exports[`Snapshots - Mobile Header RelativeContainer 1`] = `
<DocumentFragment>
  .c0 {
  min-height: 44px;
  width: 100%;
  position: relative;
}

@media (min-width:1024px) {
  .c0 {
    display: none;
  }
}

<div
    class="c0"
  >
    Test
  </div>
</DocumentFragment>
`;
